// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches ListGroupItem info 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #10707f;
  background-color: #a3d6de;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

<li
  className="c0"
/>
`;

exports[`Styles matches ListGroupItem info action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #10707f;
  background-color: #a3d6de;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #10707f;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #a3d6de;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

<li
  action={true}
  className="c0"
/>
`;

exports[`Styles matches ListGroupItem info active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #fff;
  background-color: #a3d6de;
  border-color: rgba(0,0,0,0.2);
  background-color: #10707f;
  border-color: #10707f;
  z-index: 2;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid #10707f;
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #10707f;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

<li
  className="c0"
/>
`;
